# ssl-host

./: README.md
robocup_ssl_msgs/msg/grsim/: RobotCommand.msg
ssl_robot_controller/: CMakeLists.txt  package.xml
ssl_robot_controller/include/ssl_robot_controller/: robot_controller_component.h  trajectory_control.h  trajectory_controller.h
ssl_robot_controller/launch/: ssl_robot_controller.launch.py
ssl_robot_controller/src/: robot_controller_component.cc  trajectory_control.cc  trajectory_controller.cc
ssl_robot_controller_interfaces/: CMakeLists.txt  package.xml
ssl_robot_controller_interfaces/action/: TrajectoryControl.action  TrajectoryController.action
